--- a/capstone/android/gradle.properties
+++ b/capstone/android/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.javaCompile.suppressSourceTargetDeprecationWarning=true
 android.suppressUnsupportedCompileSdk=33
+android.nonTransitiveRClass=false
