--- a/capstone/android/app/build.gradle
+++ b/capstone/android/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation("com.naver.maps:map-sdk:3.21.0")
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
