--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   google_sign_in: ^6.2.2
- 
+  flutter_naver_map: ^1.3.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
