--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^2.2.0   # 또는 pub.dev에서 최신 버전 확인 후 입력
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
