gitignore 파일 수정. 불필요한 파일 깃 애드 방지

--- a/capstone/.gitignore
+++ b/capstone/.gitignore
@@ -49,3 +49,44 @@ build/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Dart/Pub
+.dart_tool/
+.packages
+.pub/
+build/
+.flutter-plugins
+.flutter-plugins-dependencies
+.metadata
+
+# Android
+android/.gradle/
+android/.idea/
+android/local.properties
+android/app/.cxx/
+android/app/build/
+android/build/
+*.iml
+
+# iOS
+ios/Pods/
+ios/.symlinks/
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Flutter/app.flx
+ios/Flutter/app.zip
+ios/Flutter/engine/
+ios/Flutter/flutter_assets/
+ios/ServiceDefinitions.json
+ios/Runner/GeneratedPluginRegistrant.*
+
+# Windows
+windows/runner/Debug/
+windows/runner/Release/
+windows/runner/Profile/
+windows/flutter/ephemeral/
+
+# 기타
+.idea/
+*.log
