--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_sign_in: ^6.2.2
   flutter_naver_map: ^1.3.0
   permission_handler: ^11.0.1
+  cloud_firestore: ^5.4.0
+  firebase_storage: ^12.0.0
 
 dev_dependencies:
   flutter_test:
