--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/murder.png
     - assets/robbery.png
     - assets/sexual_violence.png
+    - assets/swords.png
   # - images/
   #   - images/a_dot_ham.jpeg
 
