--- a/capstone/android/app/src/main/AndroidManifest.xml
+++ b/capstone/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
-        android:label="capstone"
+        android:label="SIFF"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
