--- a/capstone/functions/package.json
+++ b/capstone/functions/package.json
@@ -13,8 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.0.1",
+    "openai": "^5.22.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
