--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^3.12.1
+  firebase_core: ^3.15.2
   firebase_auth: ^5.5.1
   google_sign_in: ^6.2.2
   flutter_naver_map: ^1.3.0
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.4.0
   firebase_storage: ^12.0.0
   image_picker: ^0.8.7+3
+  cloud_functions: ^5.6.2
 
 dev_dependencies:
   flutter_test:
